--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,9 @@ body {
   margin: 0px;
   font-family: "Open Sans", sans-serif;
 }
+
+/* Header */
+
 .header {
   background-image: url(../image/bg.jpg);
   height: 100vh;
@@ -142,6 +145,9 @@ body {
 .header-btn:hover {
   transform: scale(1.05);
 }
+
+/* Card */
+
 .card-holder {
   display: flex;
   justify-content: center;
@@ -179,8 +185,12 @@ body {
 span {
   color: #d67e35;
 }
+
+/* History */
+
 .history {
   margin-top: 160px;
+  padding-bottom: 200px;
 }
 .history-title {
   font-family: "Tinos", serif;
@@ -229,12 +239,132 @@ span {
 .images-2 {
   position: absolute;
   z-index: 2;
-  top: -112px;
+  top: -70px;
   left: 340px;
 }
 .images-3 {
   position: absolute;
   z-index: 3;
-  top: 240px;
+  top: 310px;
   left: 450px;
+}
+
+/* black-block */
+
+.black-block {
+  background-image: url(../image/bg1.jpg);
+  padding: 60px 0px;
+}
+.left-title {
+  font-family: "Tinos", serif;
+  font-size: 52px;
+  font-weight: 400;
+  color: #d67e35;
+  margin-bottom: 20px;
+}
+.left-text {
+  font-family: "Open Sans", sans-serif;
+  font-size: 24px;
+  font-weight: 700;
+  color: #fff;
+}
+.block-holder {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.right-btn {
+  font-size: 50px;
+}
+
+/* Dishes */
+.dishes {
+  margin-bottom: 150px;
+}
+.dishes-title {
+  font-family: "Tinos", serif;
+  text-align: center;
+  font-size: 60px;
+  padding: 140px;
+}
+.burgers {
+  display: flex;
+  justify-content: center;
+}
+.burger-item {
+  display: flex;
+  align-items: center;
+  margin-bottom: 27px;
+}
+.burgers-img {
+  margin-right: 20px;
+}
+.burger-text {
+  font-family: "Tinos", serif;
+  text-align: center;
+  font-size: 26px;
+  margin-left: 20px;
+}
+
+/* Menu */
+
+.menu {
+  background-image: url(../image/bar-bg.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  padding-bottom: 100px;
+}
+.menu-title {
+  font-family: "Tinos", serif;
+  text-align: center;
+  font-size: 54px;
+  font-weight: 300;
+  color: #fff;
+  padding-top: 98px;
+  padding-bottom: 138px;
+}
+.menu-img {
+  border-radius: 50%;
+}
+.menu-item {
+  background-color: #fff;
+  text-align: center;
+  width: 33%;
+  padding-top: 60px;
+  padding-bottom: 30px;
+  margin-right: 20px;
+}
+.menu-text {
+  font-family: "Tinos", serif;
+  text-align: center;
+  font-size: 26px;
+  padding-top: 16px;
+  padding-bottom: 17px;
+}
+.subtext {
+  padding-bottom: 20px;
+}
+.shadow {
+  box-shadow: 5px 5px 10px 0px #00000040;
+  font-size: 22px;
+}
+.price-image {
+  position: absolute;
+  top: 140px;
+  left: 200px;
+}
+.menu-image {
+  position: relative;
+}
+.price-10 {
+  font-size: 30px;
+  font-weight: 700;
+  position: absolute;
+  top: 170px;
+  left: 227px;
+}
+.menu-items {
+  display: flex;
+  justify-content: center;
 }
