--- a/css/styles.css
+++ b/css/styles.css
@@ -9,7 +9,7 @@ body {
   background-image: url(../image/bg.jpg);
   height: 100vh;
   background-repeat: no-repeat;
-  background: cover;
+  /* background: cover; */
 }
 .container {
   margin: 0px 165px;
@@ -32,6 +32,9 @@ body {
   font-size: 15px;
 
   transition: all 0.2s linear;
+}
+.burger-menu {
+  display: none;
 }
 .nav-item:hover {
   color: #d67e35;
@@ -87,6 +90,7 @@ body {
 }
 .header-down {
   position: relative;
+  padding-bottom: 300px;
 }
 .header-title {
   margin-bottom: 12px;
@@ -234,19 +238,19 @@ span {
   position: absolute;
   z-index: 0;
   top: 55px;
-  left: 130px;
+  left: 30px;
 }
 .images-2 {
   position: absolute;
   z-index: 2;
   top: -70px;
-  left: 340px;
+  left: 240px;
 }
 .images-3 {
   position: absolute;
   z-index: 3;
   top: 310px;
-  left: 450px;
+  left: 350px;
 }
 
 /* black-block */
@@ -286,7 +290,7 @@ span {
   font-family: "Tinos", serif;
   text-align: center;
   font-size: 60px;
-  padding: 140px;
+  padding: 140px 0px;
 }
 .burgers {
   display: flex;
@@ -324,13 +328,11 @@ span {
   padding-top: 98px;
   padding-bottom: 138px;
 }
-.menu-img {
-  border-radius: 50%;
-}
+
 .menu-item {
   background-color: #fff;
   text-align: center;
-  width: 33%;
+  width: 400px;
   padding-top: 60px;
   padding-bottom: 30px;
   margin-right: 20px;
@@ -357,13 +359,7 @@ span {
 .menu-image {
   position: relative;
 }
-.price-10 {
-  font-size: 30px;
-  font-weight: 700;
-  position: absolute;
-  top: 170px;
-  left: 227px;
-}
+
 .menu-items {
   display: flex;
   justify-content: center;
@@ -458,4 +454,119 @@ span {
   padding: 30px 0px;
   color: #fff;
   text-align: center;
+}
+
+@media (max-width: 1100px) {
+  .menu-items {
+    display: block;
+  }
+  .menu-item {
+    margin: 20px auto;
+    width: 500px;
+  }
+}
+@media (max-width: 1250px) {
+  .header-title {
+    position: static;
+  }
+  .header-suptitle::after,
+  .header-suptitle::before {
+    content: none;
+  }
+  .cook-content {
+    display: block;
+  }
+  .cook-content img {
+    display: block;
+    margin: 20px auto;
+  }
+  .galery-content {
+    display: block;
+  }
+  .img-gal,
+  .galery-down,
+  .galery-up {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .img-gal {
+    margin-bottom: 20px;
+  }
+  .galery-left {
+    margin-right: 0px;
+  }
+  .block-holder {
+    display: block;
+  }
+  .left-title,
+  .left-text,
+  .button-table {
+    text-align: center;
+  }
+  .button-table {
+    margin-top: 30px;
+  }
+  .history-img {
+    display: none;
+  }
+  .history-title,
+  .history-desc,
+  .history-number {
+    width: auto;
+  }
+  .burger-menu {
+    display: block;
+  }
+  .nav,
+  .cart,
+  .phone,
+  .btn-nav,
+  .burgers-img {
+    display: none;
+  }
+  .header-line {
+    justify-content: space-between;
+  }
+  .card-holder {
+    display: block;
+  }
+  .card {
+    width: 100%;
+    margin-top: 20px;
+    margin-bottom: 20px;
+  }
+}
+
+@media (max-width: 890px) {
+  .hight {
+    display: none;
+  }
+}
+@media (max-width: 810px) {
+  .history-holder {
+    display: block;
+  }
+  .menu-item {
+    width: auto;
+  }
+  .container {
+    margin: 0px 80px;
+  }
+}
+@media (max-width: 620px) {
+  .container {
+    margin: 0px 25px;
+  }
+  .card {
+    padding: 0px;
+  }
+  .number-item {
+    font-size: 14px;
+    margin: 15px;
+  }
+  .number-item span {
+    font-size: 22px;
+    font-weight: 700;
+  }
 }
